<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ManageAccountDemo</string>
    <string name="Logo">LOGO</string>
    <string name="CreateAccount">Create an Account</string>
    <string name="Username">Username</string>
    <string name="FullName">Full name</string>
    <string name="Email">Email</string>
    <string name="PhoneNumber">Phone number</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="ReturnToHome">Return To Home</string>
    <string name="AlreadyRegister">Already Registered? Login Here</string>
    <string name="LoginTag">Welcome</string>
    <string name="NewHere">New Here? Create an Account</string>
    <string name="password">Password</string>
    <string name="Sign_In">Sign In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="sign_out">Sign Out</string>

    <string name="facebook_app_id">689848842848322</string>
    <string name="fb_login_protocol_scheme">fb689848842848322</string>
    <string name="facebook_client_token">0faa543e52bedf1462273c1a181b3fd1</string>
    <string name="Sign_Out">Sign out</string>
    <string name="login">Login</string>
    <string name="new_here">New here?</string>
    <string name="register_now">Register Now</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="guest">Guest</string>
</resources>