<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#393939"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout_Menu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center|right"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/btn_signOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:onClick="signOut"
            android:text="@string/Sign_Out"
            android:background="@drawable/button"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintVertical_bias="0.95" />

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToSignIn"
            android:text="@string/Sign_In"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintVertical_bias="0.95"
            android:visibility="visible"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>