<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogin">

    <!--    app:fontFamily="@font/advent_pro_thin"-->
    <!--    app:fontFamily="@font/advent_pro_thin"-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/Logo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="45dp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginTag"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"/>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <EditText
            android:id="@+id/et_username2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:background="#005E4A4A"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:background="#005E4A4A"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayoutSignInMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_Google_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:visibility="gone"
                app:buttonSize="standard" />

            <Button
                android:id="@+id/btn_login_Google"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/gg_icon"
                android:paddingStart="12dp"
                android:text="Google"
                android:textSize="12dp"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/sign_in_Facebook_button"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:text="Facebook"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_login_Facebook"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/fb_icon"
                android:paddingStart="12dp"
                android:text="Facebook"
                android:textSize="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutLoginSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="#000000"
                android:onClick="signIn"
                android:text="Login"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/sign_out_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:background="#000000"
                android:onClick="signIn"
                android:text="@string/sign_out"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <!--    app:fontFamily="@font/advent_pro_thin"-->

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    app:fontFamily="@font/advent_pro_thin"-->

</androidx.constraintlayout.widget.ConstraintLayout>